# human-machine-interfaces

./: .gitignore  README.md
project/hmi_app/: config.yml  pyproject.toml  run.py  setup.cfg
project/hmi_app/config/: settings.yml
project/hmi_app/docker/: Dockerfile  entrypoint.sh
project/hmi_app/server/: __init__.py
project/hmi_app/server/config/: dev.py  prod.py
project/hmi_app/server/modules/file_manager/: dto.py  views.py
project/hmi_app/server/modules/file_manager/services/: factory.py
project/hmi_app/server/modules/file_manager/services/actions/: __init__.py  base.py  change_dir.py  copy_files.py  create_file.py  list_files.py
project/hmi_app/server/modules/file_manager/templates/file_manager/: index.html
project/hmi_app/server/modules/home/: views.py
project/hmi_app/server/modules/home/static/css/: style.css
project/hmi_app/server/modules/home/templates/home/: index.html
project/hmi_app/server/modules/numbers/: dto.py  views.py
project/hmi_app/server/modules/numbers/services/: __init__.py  files.py  numbers.py  redis.py
project/hmi_app/server/modules/numbers/static/css/: style.css
project/hmi_app/server/modules/numbers/templates/numbers/: index.html  validate.html
project/hmi_app/server/settings/: logging.py  redis.py
project/hmi_app/tests/: conftest.py
project/hmi_app/tests/test_server/test_config/: test_config_classes.py
project/hmi_app/tests/test_server/test_modules/test_file_manager/test_services/: test_factory.py
project/hmi_app/tests/test_server/test_modules/test_home/test_views/: test_index.py
(+7 files in other folders)
