[tool.poetry]
name = "hmi_app"
version = "0.0.1"
description = "Application for \"human-machine interfaces\" course"
authors = ["Андрей Романов <romanov_andrey_vl@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.1"
Flask-WTF = "^0.14.3"
dynaconf = "^2.2.2"
flask-redis = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
