[tool.poetry]
name = "hmi_app"
version = "0.0.1"
description = "Application for \"human-machine interfaces\" course"
authors = ["Андрей Романов <romanov_andrey_vl@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.1"
Flask-WTF = "^0.14.3"
flask-redis = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-flask = "^0.15.1"
pytest-cov = "^2.8.1"
pytest-randomly = "^3.2.1"
pytest-testmon = "^1.0.2"
pytest-timeout = "^1.3.4"
fakeredis = "^1.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
